# pinstripe

./: .gitignore  README.md  setup.cfg
example/: pinstripe.py  playbooks.py  util.py
src/pinstripe/: __init__.py  cli.py  context.py  edge.py  graph.py  hosts.py  node.py  playbook.py  result.py  scoped_edge.py  types.py
src/pinstripe.egg-info/: PKG-INFO  SOURCES.txt
src/pinstripe/ops/: command.py  directory.py  entity.py  fact_registry.py  file.py  noop.py  stat.py
src/pinstripe/ops/facts/: os.py  provider.py
