[metadata]
name = pinstripe
version = attr: pinstripe.__version__
author = Chris Carpita
author_email = ccarpita@gmail.com
url = https://github.com/pytown/pinstripe
project_urls = 
    Bug Tracker = https://github.com/pytown/pinstripe/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Fast, expressive provisioning of local and remote hosts
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.7
package_dir = 
    = src
packages = find:
install_requires =
    pyyaml

[options.packages.find]
where = src
